--- a/projets-2.html
+++ b/projets-2.html
@@ -139,7 +139,7 @@
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Le projet « Traditions des Cosaques à travers le temps et l’espace » organisé par la Société des Cosaques de stanitsa « Platovskoé » de Université Polytechnique d'État du Sud de la Russie M. I. Platov et l'Union Nationale des Combattants de Béarn (France) avec le soutien du Fonds de subventions présidentielles, est une plateforme de contact franco-russe pour les jeunes patriotes, Cadets français et Cosaques russes, qui permet de faire des échanges concernant la perception patriotique dans le respect mutuel des cultures de nos peuples.<br><br></p>
+                            <p class="mbr-text mbr-fonts-style display-7">Le projet « Traditions des Cosaques à travers le temps et l’espace » organisé par la Société des Cosaques de la stanitza « Platovskaïa » de Université Polytechnique d'État du Sud de la Russie M. I. Platov et l'Union Nationale des Combattants du Béarn (France) avec le soutien du Fonds de subventions présidentielles, est une plateforme de contact franco-russe pour les jeunes patriotes, Cadets français et Cosaques russes, qui permet de faire des échanges relatifs à la perception patriotique dans le respect mutuel des cultures de nos peuples.<br><br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://www.facebook.com/groups/137297468532110" target="_blank">
@@ -177,7 +177,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="S4jwhg7EXgsQDOEHwqlegQPhcfGKvGM5esUzC96n4iHnq5ipSjpY2d6OXwvHLOtu86K2fWPBkYL7kTi5HlAHfwzo/LUy1rcbQgORiLwuzDeraixHIjWYBlZR4ez0Cc2h">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sI14/Rb9dk3KSmLkLMl9a5ncLUb+4Z+E2oeD0VXuE0lTIac9mFvNB9c8V5cBEY0OEyyssGQkacnoqvKQoxVoGD+4pAF8YNH4HAkolOpJtfnTHUIPRvpPGZdmUxB/0O6j">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -233,7 +233,7 @@
                     Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
