--- a/ru/projets-3.html
+++ b/ru/projets-3.html
@@ -176,12 +176,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="t1GpoMiGnv" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="t3PAVxyNkt" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#t1GpoMiGnv" data-bs-target="#t1GpoMiGnv"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#t1GpoMiGnv" data-bs-target="#t1GpoMiGnv"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#t1GpoMiGnv" data-bs-target="#t1GpoMiGnv"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#t1GpoMiGnv" data-bs-target="#t1GpoMiGnv"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#t1GpoMiGnv" data-bs-target="#t1GpoMiGnv"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#t3PAVxyNkt" data-bs-target="#t3PAVxyNkt"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#t3PAVxyNkt" data-bs-target="#t3PAVxyNkt"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#t3PAVxyNkt" data-bs-target="#t3PAVxyNkt"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#t3PAVxyNkt" data-bs-target="#t3PAVxyNkt"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#t3PAVxyNkt" data-bs-target="#t3PAVxyNkt"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -213,11 +213,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#t1GpoMiGnv">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#t3PAVxyNkt">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#t1GpoMiGnv">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#t3PAVxyNkt">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -235,7 +235,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lmvLCaB77s4NpvDSLTZgeuVNZ+SSORKZfeRAg5UplPtXscaR59Y5+PaLsFuw027ghuTiGCgPNmmZO52TDta2J5g6zXH2aSg41MnMI4vZC8hCvfbMNGXhqbn/RaAgbn53">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Std5qw8NHygq/JPAEl9EOaFxceiJEJnVIbuDC9e1tj6eQkSfZw9gyyLnEyYbkdoFKOZZD08LY9eZbZgpouObCgfwyeDOQ+d/J1uhrLZowcRl4mlhEMxzkD0IQgGfvSZ3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
