--- a/ru/actualites-5.html
+++ b/ru/actualites-5.html
@@ -132,12 +132,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="ttt9EvgQ23" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="ttM0B04f0j" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#ttt9EvgQ23" data-bs-target="#ttt9EvgQ23"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#ttM0B04f0j" data-bs-target="#ttM0B04f0j"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -239,11 +239,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ttt9EvgQ23">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ttM0B04f0j">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ttt9EvgQ23">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ttM0B04f0j">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -283,7 +283,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HkJg9p1Ve5d25uiCsEKCkRUaF7aCf3+Xe7gAcGWVYtCCSxvEB8I2xFE2UcjZXhw1FfXZVxRvvNqMA5G4WmuyiX790m5NrK3w2SUc2/RvddS+QGZlm+m/N8VCH8llV1J1">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4Z4Gwf+AYWZxAyNlPqt0hCGHzmCzRC+xI/gXJwtkqp0dyltSvRTaKqi9/yKO8b334WDaXKp9fRRKpPgK4jGix4Y1lpj1iQVESTwo+LeisMrYQZomSs5k6iqwcmerXTL0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -338,7 +338,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
