--- a/ru/projets-3.html
+++ b/ru/projets-3.html
@@ -174,12 +174,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="ttt9LQ1dz2" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="ttM0FKK32O" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ttt9LQ1dz2" data-bs-target="#ttt9LQ1dz2"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ttt9LQ1dz2" data-bs-target="#ttt9LQ1dz2"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ttt9LQ1dz2" data-bs-target="#ttt9LQ1dz2"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ttt9LQ1dz2" data-bs-target="#ttt9LQ1dz2"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#ttt9LQ1dz2" data-bs-target="#ttt9LQ1dz2"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ttM0FKK32O" data-bs-target="#ttM0FKK32O"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ttM0FKK32O" data-bs-target="#ttM0FKK32O"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ttM0FKK32O" data-bs-target="#ttM0FKK32O"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ttM0FKK32O" data-bs-target="#ttM0FKK32O"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#ttM0FKK32O" data-bs-target="#ttM0FKK32O"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -211,11 +211,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ttt9LQ1dz2">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ttM0FKK32O">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ttt9LQ1dz2">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ttM0FKK32O">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -233,7 +233,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vxN8tetY2y8lWQe0zFkz/4u9msSNL9Uw5CkBxkQbxyhipKMno15fJTXiD6SVPMELcPbfmFfwvPnRg5f0DCJwmpHea5woZKOszYQlXTW07/XcV5DYRuqXcoZxqcWxH4iK">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sdfBYVmwxS7clFruFP/7wcyHb8w+Z6QAbFOGFUFHs3Zibhh8xwvY7bue+Kanw5pJmCVrAPMaPYJp/gX5DXrJTC4QdQ88r/ISb5EYlqnN1tXVluBbVsKUqSwABgAc0Od0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -288,7 +288,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
